add pmp mindmap

--- a/program/leetcode/排序.md
+++ b/program/leetcode/排序.md
@@ -3,7 +3,7 @@
 ## leetcode题目：
 
 快速排序
-[167. Two Sum II - Input array is sorted](src/167_two_Sum_II-Input_array_is_sorted.ipynb)   
+[167. Two Sum II - Input array is sorted](src/167_two_Sum_II-Input_array_is_sorted.md)   
 
 堆排序
-[215. Kth Largest Element in an Array](src/215_Kth_Largest_Element_in_an_Array.ipynb)
+[215. Kth Largest Element in an Array](src/215_Kth_Largest_Element_in_an_Array.md)
