--- a/program/leetcode/双指针.md
+++ b/program/leetcode/双指针.md
@@ -2,7 +2,7 @@
 专门有一个标签，名为“双指针”，有数组中的“双指针”，也有单链表中的“双指针”
 
 对撞指针
-167
+[167. Two Sum II - Input array is sorted](src/167_Two_Sum_II-Input_array_is_sorted.md)
 125
 344
 345
